# ponyo

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
LEGv8/: sim.py
docs/docstrings/: README.md  ecccpu.decode.md  ecccpu.execr.md  ecccpu.md  ecccpu.mem.md  gui.md  legv8.decode.md  legv8.execr.md  legv8.md  legv8.mem.md  ponyo.md
docstrings/: index.html
docstrings/ecccpu/: index.html
docstrings/ecccpu.decode/: index.html
docstrings/ecccpu.execr/: index.html
docstrings/ecccpu.mem/: index.html
docstrings/gui/: index.html
docstrings/legv8/: index.html
docstrings/legv8.decode/: index.html
docstrings/legv8.execr/: index.html
docstrings/legv8.mem/: index.html
docstrings/ponyo/: index.html
examples/ecccpu/: fib.asm
examples/legv8/: fib.asm
ponyo/: gui.py  ponyo.py  sim.py
ponyo/ecccpu/: decode.py  execr.py  mem.py
ponyo/legv8/: decode.py  exec.py  execr.py  mem.py
search/: search_index.json
