[project]
name = "ponyo"
version = "0.1"
description = "ISA simulator currently supporting (some of) LEGv8"
authors = [
    {name="Margret Riegert", email="margret@eowyn.net"}
]
dependencies = [
    "PySimpleGUIQt ~= 0.35.0",
    "lazydocs ~= 0.4.8",
    "mkdocs ~= 1.3.0",
    "mkdocs-awesome-pages-plugin ~= 2.7.0",
    "black ~= 22.3.0",
    "docstr-coverage ~= 2.2.0"
]

readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Home = "https://github.com/nobodywasishere/ponyo"

[project.scripts]
ponyo = "ponyo:ponyo._main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"